Record TBW working manually only with Smarmontools